2018-10-22  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gparchive.c:
    Minor bugfix.
    Thanks for the warning of Hans-Bernhard Broeker.

  * configure, configure.ac:
    Now use MPLABX_PATH_DEFAULT="/opt/microchip/mplabx/v5.05".

2018-10-22  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/preprocess.c,
    gpasm/scan.l,
    gpasm/util.c,
    gplink/scan.l,
    gputils/scan.l,
    libgputils/gpdis.c:
    Added patch: "#73 Fix calls to <cytpe.h> macros like isprint()"
    Thanks to Hans-Bernhard Broeker.

2018-10-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx:
    updated

2018-10-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/Makefile.am,
    header/Makefile.in,
    header/p18f24q10.inc,
    header/p18f25q10.inc,
    header/p18f26q10.inc,
    header/p18f45q10.inc,
    header/p18f46q10.inc,
    libgputils/gpcfg-table.c,
    libgputils/gpcfg.h,
    libgputils/gpprocessor.c,
    libgputils/gpreg-table.c,
    libgputils/gpregister.h,
    lkr/Makefile.am,
    lkr/Makefile.in,
    lkr/18f24q10_g.lkr,
    lkr/18f25q10_g.lkr,
    lkr/18f26q10_g.lkr,
    lkr/18f45q10_g.lkr,
    lkr/18f46q10_g.lkr:
    Added patch: "#72 Add PIC18F Q10 devices"
    Thanks to Jacques Gagnon.

  * doc/gpdasm_sample.ulist:
    Fixed a typo.

2018-07-20  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpcod.c:
    Fixed bug: "#310 gplink 1.5.0 not generating correct .cod files"
    Thanks to Roy Rankin.

2017-10-02  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/Makefile.am,
    gpasm/Makefile.in,
    gpasm/coff.c,
    gpasm/directive.c,
    gpasm/gpasm.c,
    gpasm/gpasm.h.in,
    gpasm/symbol_list.c,
    gpasm/symbol_list.h,
    gpasm/util.c:
    I dropped the entire symbol FIFO.
    Fixed bug: "#305 warning: Relocation symbol ".file" ..."
    Thanks to Gál Zsolt.

2017-07-10  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gputils/gpstrip.c,